# violetbeacon_deptrack_testproject_rust_cargo

./: Cargo.toml  Makefile  cyclonedx-allfeatures.cdx.json  cyclonedx.cdx.json  dependency_comparison.ods  violetbeacon_deptrack_testproject_rust_cargo.cdx.json
artefacts/: audit_list.txt  cargo_lock_list.txt  cyclonedx-allfeatures_downloads.txt  cyclonedx_downloads.txt  tree_list.txt
